2006-11-06  Inge Wallin  <inge@lysator.liu.se>

	Fix  bug 128758: misinterpretation of the checkbox "first row as label"
	* kchart_part.cc (createLabelsAndLegend): Pass parameters as
	references.

2006-10-29  Inge Wallin  <inge@lysator.liu.se>

	* Imported KDChart 1.1.4.

2006-10-10  Inge Wallin  <inge@lysator.liu.se>

	* kchart_params.cc (saveOasisAxis): Add saving of axis titles.

2006-10-06  ----  Version 1.6.0 tagged  ----

2006-10-03  Inge Wallin  <inge@lysator.liu.se>

	* kchart_params.cc (loadOasisPlotarea): Fix bug.  Pie charts use
	only the y axis, not only the x axis.

2006-09-28  Inge Wallin  <inge@lysator.liu.se>

	* kchart_params.cc (loadOasisPlotarea): Add support for
	chart:series-source (row or column):

2006-08-11  Inge Wallin  <inge@lysator.liu.se>

	Only show checkboxes in config dialog if applicable.
	* kchart_params.h (KChartParams::part): new method
	* kchartDataConfigPage.cc: Only show the checkboxes "First row/col
	as headers" if we have external data.

2006-08-06  Inge Wallin  <inge@lysator.liu.se>

	Disable "First row/col as label in the data editor.
	* kchartDataEditor.cc (kchartDataEditor): Disable checkboxes
	
2006-08-04  Inge Wallin  <inge@lysator.liu.se>

	Let the Data Editor use icons for it's buttons.
	* kchartDataEditor.cc (kchartDataEditor): Make the insert / delete
	row / col buttons show an icon instead of text.
	* kchartDataEditor.cc (addDocs): Add ToolTips to the buttons.

2006-07-18  Inge Wallin  <inge@lysator.liu.se>

	Clean up the data editor and fix bug 129553: kchart: crash / heavy
	load with Row=0 in KChart Data Editor
	* kchartDataEditor.{h,cc} (currentChanged): New method
	(m_insertRowButton, m_removeRowButton, m_insertRowButton,
	  m_removeRowButton): New members
	* kchartDataEditor.cc (removeCurrentRow, removeCurrentCol): Don't
	allow to remove a row or column if it's the first column or if
	there are only 2 of them.

	Some small cleaning.
	
2006-07-17  Inge Wallin  <inge@lysator.liu.se>
