@@ -1,3 +1,14 @@
+2006-11-07  Inge Wallin  <inge@lysator.liu.se>
+
+	Start on bug 134194: Impossible to change the data range.
+	Step 1: Actually set and read the data area.
+	* kchart_params.h: store the data area in the params.
+	* kchartDataConfigPage.cc (init): Set dataArea lineEdit.
+	(defaults): clear it
+	(apply): set dataArea from the lineEdit
+	* kchartWizardSelectDataFormatPage.cc (constructor): set dataArea lineEdit 
+	(apply): set dataArea from the lineEdit
+
 2006-11-06  Inge Wallin  <inge@lysator.liu.se>
 
 	Fix  bug 128758: misinterpretation of the checkbox "first row as label"
